--- a/public/results.html
+++ b/public/results.html
@@ -12,19 +12,19 @@
 	<link href="css/bootstrap-theme.css" rel="stylesheet"> -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-	<link href="../public/css/results.css" rel="stylesheet">
+	<link href="css/results.css" rel="stylesheet">
 </head>
 <body>
 	<div class="topBar fixed-top" >
 		<div class="row">
 			<div class="col">
-				<a src="#"><img src="../images/backButton.png" class="topIcons"></a>
+				<a src="#"><img src="images/backButton.png" class="topIcons"></a>
 			</div>
 			<div class="col-8">
 				<h4>Results</h4>
 			</div>
 			<div class="col">
-				<a src="#"><img src="../images/infoButton.png" class="topIcons" id="infoButton"></a>
+				<a src="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
 			</div>
 		</div>
 	</div>
@@ -132,11 +132,11 @@
 		</div>
 	</div>
 	<div class="mynavbar">
-		<a href="#"><img src="../images/homeButton.png" class="bottomIcons" alt="Home"></a>
-		<a href="#"><img src="../images/textButton.png" class="bottomIcons" alt="Message"></a>
-		<a href="#"><img src="../images/createNewButton.png" class="bottomIcons" alt="Create New"></a>
-		<a href="#"><img src="../images/calendarButton.png" class="bottomIcons" alt="Calendar"></a>
-		<a href="#"><img src="../images/searchButton.png" class="bottomIcons" alt="Search"></a>
+		<a href="#"><img src="images/homeButton.png" class="bottomIcons" alt="Home"></a>
+		<a href="#"><img src="images/textButton.png" class="bottomIcons" alt="Message"></a>
+		<a href="#"><img src="images/createNewButton.png" class="bottomIcons" alt="Create New"></a>
+		<a href="#"><img src="images/calendarButton.png" class="bottomIcons" alt="Calendar"></a>
+		<a href="#"><img src="images/searchButton.png" class="bottomIcons" alt="Search"></a>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
