--- a/public/search.html
+++ b/public/search.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-light bg-light">
             <!--chevron arrow-->
-    		<a class="navbar-brand" href="#">
+    		<a class="navbar-brand" href="../views/index.handlebars">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
                 </svg>
@@ -81,7 +81,7 @@
             <!--submit-->
             <div class="form-group row">
                 <div class="col-sm-10">
-                    <button type="submit" class="btn btn-secondary">Go!</button>
+                    <a href="results.html" class="btn btn-secondary" role="button">Go!</a>
                 </div>
             </div>
         </form>
@@ -97,7 +97,7 @@
                 </svg>
             </a>
             <!--search-->
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                 </svg>
