--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,73 @@
 <html>
 <head>
-	<title>page 6</title>
+	<title>Test Page</title>
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
-</head>
 <body>
-    <!-- top nav -->
+	<!-- top nav -->
 	<div class="topBar fixed-top" >
 		<div class="row">
 			<div class="col">
-				<a href="index.html"><img src="images/backButton.png" class="topIcons"></a>
+				<!-- <a href="index.html"><img src="images/backButton.png" class="topIcons"></a> -->
 			</div>
 			<div class="col-8">
-				<h4>pg6</h4>
+				<h4>Home</h4>
 			</div>
 			<div class="col">
 				<a href="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
 			</div>
 		</div>
 	</div>
-   <div class="container">
-        <p>Here is page 6.</p>
-   </div>
- 	<!-- <h4>links</h4>
-    <div id="project1">
-      <a href="index2.html">
-         This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> 
-        <p>Sustain-A-Thon</p>
-      </a> -->
-    </div> 
-
-    <!-- bottom nav -->
+	<div class="container">
+      	<h1>Home: Here are some links.</h1>
+		<div id="search">
+		<a href="search.html">
+		<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+		<p>search</p>
+		</a>
+		</div>
+		<div id="results">
+		<a href="results.html">
+			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+			<p>results</p>
+		</a>
+		</div>
+		<div id="messages">
+		<a href="messages.html">
+			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+			<p>messages</p>
+		</a>
+		</div>
+		<div id="newEvent">
+		<a href="newEvent.html">
+			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+			<p>newEvent</p>
+		</a>
+		</div>
+		<div id="profile">
+		<a href="profile.html">
+			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+			<p>profile</p>
+		</a>
+		</div>
+		<div id="kellyParty">
+		<a href="kellyParty.html">
+			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+			<p>Kelly's Puppy Party</p>
+		</a>
+		</div>
+		<div id="page6">
+		<a href="page6.html">
+			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+			<p>page6</p>
+		</a>
+		</div>
+  	</div>
+	<!-- bottom nav -->
 	<div class="mynavbar">
 		<!--home-->
 		<a class="navbar-brand" href="index.html">
@@ -67,11 +100,10 @@
 			</svg>
 		</a>
 	</div>
-
-<script src="https://code.jquery.com/jquery.js"></script>
+	
+	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/introHCI.js"></script>
-	<script id="handlebars-demo" type="text/x-handlebars-template">
-</script>
+	<script id="handlebars-demo" type="text/x-handlebars-template"></script>
 </body>
 </html>
