--- a/public/newEvent.html
+++ b/public/newEvent.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-	<title>page 6</title>
-</head>
+	<title>page 2</title>
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
 				<a href="index.html"><img src="images/backButton.png" class="topIcons"></a>
 			</div>
 			<div class="col-8">
-				<h4>pg6</h4>
+				<h4>Create New Event</h4>
 			</div>
 			<div class="col">
 				<a href="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
@@ -24,7 +24,7 @@
 		</div>
 	</div>
    <div class="container">
-        <p>Here is page 6.</p>
+        <p>Create New Event</p>
    </div>
  	<!-- <h4>links</h4>
     <div id="project1">
