--- a/public/results.html
+++ b/public/results.html
@@ -12,19 +12,20 @@
 	<link href="css/bootstrap-theme.css" rel="stylesheet"> -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-	<link href="css/results.css" rel="stylesheet">
+	<link href="css/results_search.css" rel="stylesheet">
 </head>
 <body>
+    <!-- top nav -->
 	<div class="topBar fixed-top" >
 		<div class="row">
 			<div class="col">
-				<a src="#"><img src="images/backButton.png" class="topIcons"></a>
+				<a href="search.html"><img src="images/backButton.png" class="topIcons"></a>
 			</div>
 			<div class="col-8">
 				<h4>Results</h4>
 			</div>
 			<div class="col">
-				<a src="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
+				<a href="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
 			</div>
 		</div>
 	</div>
@@ -131,12 +132,39 @@
 			<p>No more results</p>
 		</div>
 	</div>
+
+    <!-- bottom nav -->
 	<div class="mynavbar">
-		<a href="#"><img src="images/homeButton.png" class="bottomIcons" alt="Home"></a>
-		<a href="#"><img src="images/textButton.png" class="bottomIcons" alt="Message"></a>
-		<a href="#"><img src="images/createNewButton.png" class="bottomIcons" alt="Create New"></a>
-		<a href="#"><img src="images/calendarButton.png" class="bottomIcons" alt="Calendar"></a>
-		<a href="#"><img src="images/searchButton.png" class="bottomIcons" alt="Search"></a>
+		<!--home-->
+		<a class="navbar-brand" href="index.html">
+			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-house-door-fill" viewBox="0 0 16 16">
+				<path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
+			</svg>
+		</a>
+		<!--search-->
+		<a class="navbar-brand" href="search.html">
+			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-search" viewBox="0 0 16 16">
+				<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+			</svg>
+		</a>
+		<!--new event-->
+		<a class="navbar-brand" href="newEvent.html">
+			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-calendar-plus-fill" viewBox="0 0 16 16">
+				<path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zM8.5 8.5V10H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V11H6a.5.5 0 0 1 0-1h1.5V8.5a.5.5 0 0 1 1 0z"/>
+			</svg>
+		</a>
+		<!--messages-->
+		<a class="navbar-brand" href="messages.html">
+			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-chat-square-text-fill" viewBox="0 0 16 16">
+				<path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.5a1 1 0 0 0-.8.4l-1.9 2.533a1 1 0 0 1-1.6 0L5.3 12.4a1 1 0 0 0-.8-.4H2a2 2 0 0 1-2-2V2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"/>
+			</svg>
+		</a>
+		<!--profile-->
+		<a class="navbar-brand" href="profile.html">
+			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bottomIcons bi bi-person-fill" viewBox="0 0 16 16">
+				<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+			</svg>
+		</a>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
