added blankEvent, linked help and buttons on results page

--- a/public/kellyParty.html
+++ b/public/kellyParty.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>page 5</title>
+	<title>Kelly's Puppy Party</title>
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -16,15 +16,15 @@
 				<a href="index.html"><img src="images/backButton.png" class="topIcons"></a>
 			</div>
 			<div class="col-8">
-				<h4>Home</h4>
+				<h4>Kelly's Puppy Party</h4>
 			</div>
 			<div class="col">
-				<a href="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
+				<a href="help.html"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
 			</div>
 		</div>
 	</div>
    <div class="container">
-      Here is page 5.
+      Kelly's Puppy Party Event
    </div>
  	<!-- <h4>links</h4>
     <div id="project1">
