--- a/public/messages.html
+++ b/public/messages.html
@@ -18,7 +18,7 @@
                 <h4>Messages</h4>
             </div>
             <div class="col">
-                <a href="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
+                <a href="help.html"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
             </div>
         </div>
     </div>
