--- a/public/blankEvent.html
+++ b/public/blankEvent.html
@@ -1,31 +1,30 @@
 <html>
 <head>
-	<title>page 6</title>
+	<title>blank event</title>
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
-</head>
 <body>
-    <!-- top nav -->
-	<div class="topBar fixed-top" >
-		<div class="row">
-			<div class="col">
-				<a href="index.html"><img src="images/backButton.png" class="topIcons"></a>
-			</div>
-			<div class="col-8">
-				<h4>pg6</h4>
-			</div>
-			<div class="col">
-				<a href="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
-			</div>
-		</div>
-	</div>
-   <div class="container">
-        <p>Here is page 6.</p>
-   </div>
+<!-- top nav -->
+    <div class="topBar fixed-top" >
+        <div class="row">
+            <div class="col">
+                <a href="index.html"><img src="images/backButton.png" class="topIcons"></a>
+            </div>
+            <div class="col-8">
+                <h4>Blank Event</h4>
+            </div>
+            <div class="col">
+                <a href="help.html"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <p>Blank Event</p>
+    </div>
  	<!-- <h4>links</h4>
     <div id="project1">
       <a href="index2.html">
@@ -68,7 +67,7 @@
 		</a>
 	</div>
 
-<script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/introHCI.js"></script>
 	<script id="handlebars-demo" type="text/x-handlebars-template">
