--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 				<h4>Home</h4>
 			</div>
 			<div class="col">
-				<a href="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
+				<a href="help.html"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
 			</div>
 		</div>
 	</div>
@@ -60,10 +60,16 @@
 			<p>Kelly's Puppy Party</p>
 		</a>
 		</div>
-		<div id="page6">
-		<a href="page6.html">
+		<div id="help">
+		<a href="help.html">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
-			<p>page6</p>
+			<p>help</p>
+		</a>
+		</div>
+		<div id="blankEvent">
+		<a href="blankEvent.html">
+			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+			<p>blank event</p>
 		</a>
 		</div>
   	</div>
