--- a/public/results.html
+++ b/public/results.html
@@ -25,7 +25,7 @@
 				<h4>Results</h4>
 			</div>
 			<div class="col">
-				<a href="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
+				<a href="help.html"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
 			</div>
 		</div>
 	</div>
@@ -55,7 +55,7 @@
 						<p class="card-text">@Friday 2:10pm</p>	
 					</div>
 					<div class="card-button">
-						<a href="#" class="btn">Go!</a>
+						<a href="kellyParty.html" class="btn">Go!</a>
 					</div>
 				</div>
 			</div>
@@ -67,12 +67,12 @@
 						<!-- <img src="../images/" id=""> -->
 					</div>
 					<div class="card-description">
-						<h5 class="card-title">Petco Adotion Event</h5>
+						<h5 class="card-title">Petco Adoption Event</h5>
 						<h6>[Mixed]</h6>
 						<p class="card-text">@Saturday 12:00pm</p>	
 					</div>
 					<div class="card-button">
-						<a href="#" class="btn">Go!</a>
+						<a href="blankEvent.html" class="btn">Go!</a>
 					</div>
 				</div>
 			</div>
@@ -89,7 +89,7 @@
 						<p class="card-text">@Saturday 3:00pm</p>	
 					</div>
 					<div class="card-button">
-						<a href="#" class="btn">Go!</a>
+						<a href="blankEvent.html" class="btn">Go!</a>
 					</div>
 				</div>
 			</div>
@@ -106,7 +106,7 @@
 						<p class="card-text">@2/27/21 11:00am</p>	
 					</div>
 					<div class="card-button">
-						<a href="#" class="btn">Go!</a>
+						<a href="blankEvent.html" class="btn">Go!</a>
 					</div>
 				</div>
 			</div>
@@ -123,7 +123,7 @@
 						<p class="card-text">@3/1/21 2:00pm</p>	
 					</div>
 					<div class="card-button">
-						<a href="#" class="btn">Go!</a>
+						<a href="blankEvent.html" class="btn">Go!</a>
 					</div>
 				</div>
 			</div>
