--- a/public/search.html
+++ b/public/search.html
@@ -35,7 +35,7 @@
 				<h4>Search</h4>
 			</div>
 			<div class="col">
-				<a href="#"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
+				<a href="help.html"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
 			</div>
 		</div>
 	</div>
