edited home page

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
-	<title>Test Page</title>
+	<title>Test Home Page</title>
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
+</head>
 <body>
 	<!-- top nav -->
 	<div class="topBar fixed-top" >
@@ -23,53 +24,61 @@
 		</div>
 	</div>
 	<div class="container">
-      	<h1>Home: Here are some links.</h1>
+      	<!-- <h1>WePet uwu ™ <3</h1> -->
+		<div id="index">
+		<a href="index.html">
+		 	<img src="images/logo.png" alt="WePet logo" class="pic-center">
+		<!--This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
+		<br>
+		<div>
+		</a>
+		<p class="p6">Quick Links:</p>
+		</div>
 		<div id="search">
 		<a href="search.html">
-		<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
-		<p>search</p>
+		<p class="p3">search</p>
 		</a>
 		</div>
 		<div id="results">
 		<a href="results.html">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
-			<p>results</p>
+			<p class="p3">results</p>
 		</a>
 		</div>
 		<div id="messages">
 		<a href="messages.html">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
-			<p>messages</p>
+			<p class="p3">messages</p>
 		</a>
 		</div>
 		<div id="newEvent">
 		<a href="newEvent.html">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
-			<p>newEvent</p>
+			<p class="p3">newEvent</p>
 		</a>
 		</div>
 		<div id="profile">
 		<a href="profile.html">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
-			<p>profile</p>
+			<p class="p3">profile</p>
 		</a>
 		</div>
 		<div id="kellyParty">
 		<a href="kellyParty.html">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
-			<p>Kelly's Puppy Party</p>
+			<p class="p3">Kelly's Puppy Party</p>
 		</a>
 		</div>
 		<div id="help">
 		<a href="help.html">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
-			<p>help</p>
+			<p class="p3">help</p>
 		</a>
 		</div>
 		<div id="blankEvent">
 		<a href="blankEvent.html">
 			<!-- This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
-			<p>blank event</p>
+			<p class="p3">blank event</p>
 		</a>
 		</div>
   	</div>
@@ -110,6 +119,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/introHCI.js"></script>
-	<script id="handlebars-demo" type="text/x-handlebars-template"></script>
+	<script id="handlebars-demo" type="text/x-handlebars-template">
+</script>
 </body>
 </html>
