fixed line 37 of index.html

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,11 @@
 		<div id="index">
 		<a href="index.html">
 		 	<img src="images/logo.png" alt="WePet logo" class="pic-center">
+		 </a>
 		<!--This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
 		<br>
+	</div>
 		<div>
-		</a>
 		<p class="p6">Quick Links:</p>
 		</div>
 		<div id="search">
