--- a/public/search.html
+++ b/public/search.html
@@ -11,7 +11,7 @@
     <!--bootstrap-select-->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-    <link href="css/results_search.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
     <title>Search</title>
   </head>
   <body>
